@@ -811,11 +811,12 @@ let f : type a b. (a,b) eq -> [< `A of a | `B] -> [< `A of b | `B] =
 Lines 1-2, characters 4-15:
 1 | ....f : type a b. (a,b) eq -> [< `A of a | `B] -> [< `A of b | `B] =
 2 |   fun Eq o -> o..............
-Error: This expression has type
-         ('a, 'b) eq -> ([< `A of 'b & 'a | `B ] as 'c) -> 'c
-       but an expression was expected of type
-         ('a, 'b) eq -> [< `A of 'a0 | `B ] -> [< `A of 'b0 | `B ]
-       The universal variable 'a0 would escape its scope
+Error: This definition has type
+         'c 'd. ('d, 'd) eq -> ([< `A of 'd | `B ] as 'c) -> 'c
+       which is less general than
+         'e 'f 'a 'b.
+           ('a, 'b) eq ->
+           ([< `A of 'a | `B ] as 'f) -> ([< `A of 'b | `B ] as 'e)
 |}];;
 
 let f : type a b. (a,b) eq -> [`A of a | `B] -> [`A of b | `B] =
@@ -846,8 +847,9 @@ Lines 1-5, characters 4-5:
 Error: This expression has type
          ('a, 'b) eq -> [ `A of 'a | `B ] -> [ `A of 'b | `B ]
        but an expression was expected of type
-         ('a, 'b) eq -> [> `A of 'a0 | `B ] -> [ `A of 'b | `B ]
-       The universal variable 'a0 would escape its scope
+         ('a, 'b) eq -> [> `A of 'a | `B ] -> [ `A of 'b | `B ]
+       The second variant type is bound to the universal type variable 'c,
+       it cannot be closed
 |}, Principal{|
 Line 4, characters 49-50:
 4 |     let r : [`A of b | `B] = match eq with Eq -> o in (* fail with principal *)
